# Protocol

./: CMakeLists.txt  Protocol guide  README.md  main.cpp
Protocol/: BluetoothServer.cpp  BluetoothTransport.cpp  BluetoothTransport.h  MousePacket.cpp  MousePacket.h  Observability.cpp  Observability.h
Testing folder/: BluetoothReceiver.cpp  main.cpp  main2.cpp  receiver.cpp  receiver.h  sender.cpp  socketkeeper.cpp  socketkeeper.h  transmitdata.cpp  transmitdata.h
Testing folder/Test1/: receiver.cpp  sender.cpp
input_capture/: MouseHook.cpp  MouseHook.h  main.cpp
input_capture.cpp/: MouseHook.cpp  MouseHook.h  main.cpp
input_injection/: MouseInjector.cpp  MouseInjector.h  main.cpp
tests/: protocol_self_test.cpp
